region pinning for G1